<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.acp.terjelonoy.androidcertificationpreparation.MainActivity">

    <TextView
        android:id="@+id/intro_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_text" />

    <Button
        android:id="@+id/loaders_example_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intro_text"
        android:text="@string/loaders_example_button"
        android:textAlignment="textStart"
        android:gravity="start|center"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <Button
        android:id="@+id/alarm_example_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loaders_example_button"
        android:text="@string/alarm_example_button"
        android:textAlignment="textStart"
        android:gravity="start|center" />
</RelativeLayout>
